--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 <br><br><br>
 <div style="text-align:center;color:black" id="TrueorFalse">
 	<img style="width:700px" src="image.svg">
+	<br><br><a href="https://kdocs.cn/l/ci9N7qgxt4j4" target="_blank">查看完整《畜牧兽医生产经营主体代码编码规则(试行)》</a>
 </div>
-	<br><br><a href="https://kdocs.cn/l/ci9N7qgxt4j4" target="_blank">查看完整《畜牧兽医生产经营主体代码编码规则(试行)》<a>
 </body>
 
 </html>
